Dosyalar güncellendi ve yeni eklemeler yapıldı

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,7 +17,7 @@
                 <li><a href="{{ url_for('fielding_page') }}">Fielding</a></li>
                 <li><a href="{{ url_for('pitching_page') }}">Pitching</a></li>
                 <li><a href="{{ url_for('batting_page') }}">Batting</a></li>
-                <li><a href="{{ url_for('master_options') }}">Master</a></li>
+                <li><a href="{{ url_for('master_page') }}">Master</a></li>
                 <li><a href="{{ url_for('about_page') }}">About Us</a></li>
             </ul>
         </nav>
