--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -39,7 +39,7 @@ Welcome
         <!-- <img src="{{ url_for('static', filename='images/master.jpg') }}" alt="Master" class="feature-img"> -->
         <h2>Master</h2>
         <p>Explore detailed player information from the Master dataset.</p>
-        <a href="{{ url_for('master_options') }}" class="btn">View Master Data</a>
+        <a href= class="btn">View Master Data</a>
     </div>
 </section>
 {% endblock %}
